<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (C) 2000 - 2022 Silverpeas
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ As a special exception to the terms and conditions of version 3.0 of
  ~ the GPL, you may redistribute this Program in connection with Free/Libre
  ~ Open Source Software ("FLOSS") applications as described in Silverpeas's
  ~ FLOSS exception.  You should have received a copy of the text describing
  ~ the FLOSS exception, and it is also available here:
  ~ "http://www.silverpeas.org/docs/core/legal/floss_exception.html"
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.silverpeas.components</groupId>
    <artifactId>mobile</artifactId>
    <version>6.2.3-SNAPSHOT</version>
  </parent>

  <groupId>org.silverpeas.components.mobile</groupId>
  <artifactId>silverpeas-mobile-war</artifactId>
  <packaging>war</packaging>
  <name>Silverpeas Mobile Web Application</name>


  <properties>
    <gwtVersion>2.9.0</gwtVersion>
    <gwtMojoPluginVersion>2.9.0</gwtMojoPluginVersion>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <build>
    <finalName>spmobile</finalName>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>

    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <warName>spmobile</warName>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>${gwtMojoPluginVersion}</version>
        <executions>
          <execution>
            <configuration>
              <style>OBF</style>
              <!--style>DETAILED</style-->
              <modules>
                <module>org.silverpeas.mobile.SpMobil</module>
              </modules>
              <extraJvmArgs>-Xms1024m -Xmx1024m</extraJvmArgs>
              <localWorkers>3</localWorkers>
            </configuration>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>com.googlecode.gwt-crypto</groupId>
      <artifactId>gwt-crypto</artifactId>
      <version>2.3.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <version>${gwtVersion}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-dev</artifactId>
      <version>${gwtVersion}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-servlet</artifactId>
      <version>${gwtVersion}</version>
      <type>jar</type>
    </dependency>

    <dependency>
      <groupId>org.silverpeas.components.delegatednews</groupId>
      <artifactId>silverpeas-delegatednews</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.silverpeas.components.quickinfo</groupId>
      <artifactId>silverpeas-quickinfo</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.silverpeas.core</groupId>
      <artifactId>silverpeas-core-web</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.silverpeas.core</groupId>
      <artifactId>silverpeas-core-api</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.silverpeas.core.services</groupId>
      <artifactId>silverpeas-core-contact</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.silverpeas.core.services</groupId>
      <artifactId>silverpeas-core-questioncontainer</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.silverpeas.core</groupId>
      <artifactId>silverpeas-core</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.silverpeas.core.services</groupId>
      <artifactId>silverpeas-core-comment</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.silverpeas.core.services</groupId>
      <artifactId>silverpeas-core-mylinks</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.silverpeas.core.services</groupId>
      <artifactId>silverpeas-core-silverstatistics</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.silverpeas.core.services</groupId>
      <artifactId>silverpeas-core-personalorganizer</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.silverpeas.components.kmelia</groupId>
      <artifactId>silverpeas-kmelia</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.silverpeas.components.almanach</groupId>
      <artifactId>silverpeas-almanach</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.silverpeas.components.yellowpages</groupId>
      <artifactId>silverpeas-yellowpages</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.silverpeas.components.formsonline</groupId>
      <artifactId>silverpeas-formsonline</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.silverpeas.components.gallery</groupId>
      <artifactId>silverpeas-gallery</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.silverpeas.components.blog</groupId>
      <artifactId>silverpeas-blog</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.silverpeas.components.classifieds</groupId>
      <artifactId>silverpeas-classifieds</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.silverpeas.components.questionreply</groupId>
      <artifactId>silverpeas-questionreply</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.silverpeas.core.services</groupId>
      <artifactId>silverpeas-core-workflow</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.silverpeas.components.hyperlink</groupId>
      <artifactId>silverpeas-hyperlink</artifactId>
      <version>${silverpeas.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.jsoup</groupId>
      <artifactId>jsoup</artifactId>
      <version>1.11.3</version>
    </dependency>

    <dependency>
      <groupId>com.seanchenxi.gwt</groupId>
      <artifactId>gwt-storage</artifactId>
      <version>1.4.0</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.10.0.pr1</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>javax.inject</groupId>
      <artifactId>javax.inject</artifactId>
      <version>1</version>
    </dependency>
    <dependency>
      <groupId>javax.ws.rs</groupId>
      <artifactId>javax.ws.rs-api</artifactId>
      <version>2.0</version>
    </dependency>

    <dependency>
      <groupId>com.sun.jersey</groupId>
      <artifactId>jersey-client</artifactId>
      <version>1.19.4</version>
    </dependency>

    <dependency>
      <groupId>org.fusesource.restygwt</groupId>
      <artifactId>restygwt</artifactId>
      <version>2.2.6</version>
    </dependency>

    <dependency>
      <groupId>com.google.firebase</groupId>
      <artifactId>firebase-admin</artifactId>
      <version>6.12.2</version>
    </dependency>

  </dependencies>


</project>
